--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -26,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3"
   }
 }
