--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.8",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -28,6 +29,7 @@
     "dotenv": "^16.3.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
